JS code to import more than 1000 requests from the Live Objects Mongo Db

--- a/indexLO.html
+++ b/indexLO.html
@@ -17,9 +17,10 @@
     <div class="container container-table">
         <div class="row vertical-center-row">
             <div class="text-center col-md-4 col-md-offset-4">
-              <label for="max_iterations">Max number of data to return :</label>
-              <input class="form-control" id="max_iterations" value="100">
-              <small class="text-muted"> Value is limited to 1000 </small><br>
+              <label for="stream_id">Enter the Stream Id :</label>
+              <input class="form-control" id="stream_id" value="android357329073120059PRIMARY">
+              <label for="max_iterations">Enter the number of data to get :</label>
+              <input class="form-control" id="max_iterations" value="1000">
                 <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get Live Objects OAB App Data!</button>
             </div>
         </div>
